ADD : 회원가입 및 로그인 작업
- 회원가입 작업
- 로그인 작업
- 시큐리티 설정

--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -17,6 +17,9 @@
     <th:block layout:fragment="script"></th:block>
     <th:block layout:fragment="css"></th:block>
 
+    <meta name="_csrf_header" th:content="${_csrf.headerName}">
+    <meta name="_csrf" th:content="${_csrf.token}">
+
 </head>
 <body>
 
