--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -53,8 +53,7 @@
 
 <div layout:fragment="content">
 
-<!--    enctype="multipart/form-data"-->
-    <form role="form" method="post" th:object="${itemFormDto}">
+    <form role="form" method="post" th:object="${itemFormDto}" enctype="multipart/form-data">
 
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         <p class="h2">
@@ -102,24 +101,24 @@
         </div>
         <p th:if="${#fields.hasErrors('itemDetail')}" th:errors="*{itemDetail}" class="fieldError">Incorrect data</p>
 
-<!--        <div th:if="${#lists.isEmpty(itemFormDto.itemImgDtoList)}">-->
-<!--            <div class="form-group" th:each="num: ${#numbers.sequence(1,5)}">-->
-<!--                <div class="custom-file img-div">-->
-<!--                    <input type="file" class="custom-file-input" name="itemImgFile">-->
-<!--                    <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div th:if="${#lists.isEmpty(itemFormDto.itemImgDtoList)}">
+            <div class="form-group" th:each="num: ${#numbers.sequence(1,5)}">
+                <div class="custom-file img-div">
+                    <input type="file" class="custom-file-input" name="itemImgFile">
+                    <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>
+                </div>
+            </div>
+        </div>
 
-<!--        <div th:if = "${not #lists.isEmpty(itemFormDto.itemImgDtoList)}">-->
-<!--            <div class="form-group" th:each="itemImgDto, status: ${itemFormDto.itemImgDtoList}">-->
-<!--                <div class="custom-file img-div">-->
-<!--                    <input type="file" class="custom-file-input" name="itemImgFile">-->
-<!--                    <input type="hidden" name="itemImgIds" th:value="${itemImgDto.id}">-->
-<!--                    <label class="custom-file-label" th:text="${not #strings.isEmpty(itemImgDto.oriImgName)} ? ${itemImgDto.oriImgName} : '상품이미지' + ${status.index+1}"></label>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div th:if = "${not #lists.isEmpty(itemFormDto.itemImgDtoList)}">
+            <div class="form-group" th:each="itemImgDto, status: ${itemFormDto.itemImgDtoList}">
+                <div class="custom-file img-div">
+                    <input type="file" class="custom-file-input" name="itemImgFile">
+                    <input type="hidden" name="itemImgIds" th:value="${itemImgDto.id}">
+                    <label class="custom-file-label" th:text="${not #strings.isEmpty(itemImgDto.oriImgName)} ? ${itemImgDto.oriImgName} : '상품이미지' + ${status.index+1}"></label>
+                </div>
+            </div>
+        </div>
 
         <div th:if="${#strings.isEmpty(itemFormDto.id)}" style="text-align: center">
             <button th:formaction="@{/admin/item/new}" type="submit" class="btn btn-primary">저장</button>
