--- a/src/main/resources/templates/item/itemMng.html
+++ b/src/main/resources/templates/item/itemMng.html
@@ -47,7 +47,6 @@
                 <td>상품아이디</td>
                 <td>상품명</td>
                 <td>상태</td>
-                <td>등록자</td>
                 <td>등록일</td>
             </tr>
             </thead>
@@ -57,8 +56,7 @@
                 <td>
                     <a th:href="'/admin/item/'+${item.id}" th:text="${item.itemNm}"></a>
                 </td>
-                <td th:text="${item.itemSellStatus == T(com.shop.constant.ItemSellStatus).SELL} ? '판매중' : '품절'"></td>
-                <td th:text="${item.createdBy}"></td>
+                <td th:text="${item.itemSellStatus == T(com.shop.adapter.out.constant.ItemSellStatus).SELL} ? '판매중' : '품절'"></td>
                 <td th:text="${item.regTime}"></td>
             </tr>
             </tbody>
